[gd_scene load_steps=4 format=3 uid="uid://3pwk1tu6fo3o"]

[ext_resource type="Script" uid="uid://n4q4nrxyxrki" path="res://scripts/ui/perks_menu_gui.gd" id="1_6j2cj"]
[ext_resource type="Texture2D" uid="uid://2lcbgkqeo8fr" path="res://assets/gui/icon_container_image.png" id="2_2dvy3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_peeah"]
atlas = ExtResource("2_2dvy3")

[node name="PerksMenuGui" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6j2cj")

[node name="PerksMenuButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0
texture_normal = SubResource("AtlasTexture_peeah")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="TextureRect" parent="PerksMenuButton"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -32.0
offset_right = 33.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Label" type="Label" parent="PerksMenuButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.1667
offset_right = 20.0
offset_bottom = 11.1667
grow_horizontal = 2
grow_vertical = 2
text = "Perks"

[node name="PanelContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -560.5
offset_top = -315.0
offset_right = 560.5
offset_bottom = 315.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2

[node name="ChoicesContainer" type="HBoxContainer" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="CloseButton" type="Button" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
text = "Close"

[node name="RerollButton" type="Button" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Reroll (1)"

[connection signal="pressed" from="PerksMenuButton" to="." method="_on_perks_menu_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/RerollButton" to="." method="_on_reroll_button_pressed"]
